--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-image-grid-gallery": "^2.1.4",
     "react-router-dom": "^7.1.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.15"
